--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: funalgorithm
 Type: Package
-Title: What the Package Does in One 'Title Case' Line
+Title: Fundamental Algorithm
 Version: 1.0
-Date: 2024-02-29
-Author: Your Name
-Maintainer: Your Name <your@email.com>
-Description: One paragraph description of what the package does as one
-        or more full sentences.
+Date: 2024-03-12
+Author: Kristina Grolmusova
+Maintainer: Kristina Grolmusova <kristina.grolmusova1@lancaster.ac.uk>
+Description: The package takes in two preference tables as dataframes or named lists in R and outputs a stable matching given the preference tables as named list. 
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.12)
 LinkingTo: Rcpp
